market esi scan setup mokaam import working

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 
 # Regions to analyze (comma-separated region IDs)
 eve.regions=10000002
+eve.import-regions=10000002,10000043,10000032
 
 # Main stations per region (regionId=stationId)
 eve.stations.10000002=60003760
@@ -14,6 +15,22 @@ eve.profit.tax-percentage=5
 # ESI API configuration
 eve.esi.base-url=https://esi.evetech.net/latest
 eve.esi.user-agent=EVE-Dominator/1.0
+
+# Mokaam API configuration
+eve.mokaam.base-url=https://mokaam.dk
+eve.mokaam.user-agent=EVE-Dominator/1.0
+
+# Database configuration
+spring.datasource.url=jdbc:h2:file:./data/dominator
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.h2.console.enabled=true
+
+# Logging configuration
+logging.level.com.eve.dominator.service.MokaamService=DEBUG
 
 # Server configuration
 server.port=8083
