1000 seperator missing data added to details page

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 
 # Regions to analyze (comma-separated region IDs)
 eve.regions=10000002
-eve.import-regions=10000002,10000043,10000032
+eve.import-regions=10000002,10000043,10000032,10000030,10000042
 
 # Main stations per region (regionId=stationId)
 eve.stations.10000002=60003760
