seems to work relatively okay?

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,53 @@
 # EVE Online Market Domination Configuration
 
 # Regions to analyze (comma-separated region IDs)
-eve.regions=10000002
+eve.regions=10000002,10000032
 eve.import-regions=10000002,10000043,10000032,10000030,10000042
 
 # Main stations per region (regionId=stationId)
 eve.stations.10000002=60003760
+eve.stations.10000032=60011866
 
-# Monopoly scan configuration
-eve.monopoly.max-investment-millions=100
+### Monopoly scan configuration ###
+eve.monopoly.max-investment-millions=500
 eve.monopoly.target-roi-percentage=25
 eve.monopoly.tax-percentage=5
 eve.monopoly.enable-npc-filtering=true
 eve.monopoly.npc-confidence-threshold=0.7
-eve.monopoly.min-volume-threshold=1000000
-eve.monopoly.max-competitors=5
-eve.monopoly.min-margin-percentage=15
-eve.monopoly.exclude-station-trading=false
-eve.monopoly.min-daily-trades=10
+
+# Historical data filters (region-specific)
+eve.monopoly.min-volume-month=50
+eve.monopoly.min-volume-quarter=50
+eve.monopoly.min-volume-year=50
+
+# Market size filters (total ISK value in millions)
+eve.monopoly.min-market-size-month=500
+eve.monopoly.min-market-size-quarter=500
+eve.monopoly.min-market-size-year=500
+#
+## Region-specific volume overrides (optional)
+## The Forge (Jita) - High volume market, stricter filters
+#eve.monopoly.min-volume-month-by-region.10000002=50
+#eve.monopoly.min-volume-quarter-by-region.10000002=50
+#eve.monopoly.min-volume-year-by-region.10000002=50
+#
+## Region-specific market size overrides (optional)
+## The Forge (Jita) - High volume market, higher ISK value requirements
+#eve.monopoly.min-market-size-month-by-region.10000002=2000000000
+#eve.monopoly.min-market-size-quarter-by-region.10000002=2000000000
+#eve.monopoly.min-market-size-year-by-region.10000002=2000000000
+#
+## Sinq Laison (Dodixie) - Medium volume market
+eve.monopoly.min-volume-month-by-region.10000032=25
+eve.monopoly.min-volume-quarter-by-region.10000032=25
+eve.monopoly.min-volume-year-by-region.10000032=25
+#
+## Sinq Laison (Dodixie) - Medium volume market, moderate ISK value requirements
+eve.monopoly.min-market-size-month-by-region.10000032=150
+eve.monopoly.min-market-size-quarter-by-region.10000032=150
+eve.monopoly.min-market-size-year-by-region.10000032=150
+
+### Monopoly scan configuration ###
 
 # Market data configuration
 eve.market-data.enable-item-names-import=true
@@ -45,3 +75,8 @@ logging.level.com.eve.dominator.service.MokaamService=DEBUG
 # Server configuration
 server.port=8083
 spring.application.name=dominator
+
+# Performance tuning for monopoly scanner
+eve.monopoly.max-concurrent-requests=10
+eve.monopoly.request-timeout-seconds=30
+eve.monopoly.enable-volume-filtering=true
