--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,10 @@ eve.import-regions=10000002,10000043,10000032,10000030,10000042
 
 # Main stations per region (regionId=stationId)
 eve.stations.10000002=60003760
+eve.stations.10000043=60008494
 eve.stations.10000032=60011866
+eve.stations.10000030=60004588
+eve.stations.10000042=60005686
 
 ### Monopoly scan configuration ###
 eve.monopoly.max-investment-millions=500
