added filter min market size and performance improvement

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,11 @@ eve.stations.10000032=60011866
 eve.stations.10000030=60004588
 eve.stations.10000042=60005686
 
+### Tradehub scanner configuration ###
+eve.tradehub.min-price-difference-percentage=25
+eve.tradehub.min-market-size-millions=500
+eve.tradehub.max-threads=8
+
 ### Monopoly scan configuration ###
 eve.monopoly.max-investment-millions=500
 eve.monopoly.target-roi-percentage=25
