--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # EVE Online Market Domination Configuration
 
 # Regions to analyze (comma-separated region IDs)
-eve.regions=10000002,10000032
+eve.regions=10000002,10000043,10000032,10000030,10000042
 eve.import-regions=10000002,10000043,10000032,10000030,10000042
 
 # Main stations per region (regionId=stationId)
@@ -13,7 +13,8 @@ eve.stations.10000042=60005686
 
 ### Tradehub scanner configuration ###
 eve.tradehub.min-price-difference-percentage=25
-eve.tradehub.min-market-size-millions=500
+eve.tradehub.min-market-size-millions=1000
+eve.tradehub.min-market-size-alternative-millions=400
 eve.tradehub.max-threads=8
 
 ### Monopoly scan configuration ###
